testsuite/tests/interpreter_errors/struct_pattern/non_struct/test.out
script.lkql:4:18: error: Destructuring is only applicable to structs
  4 |     case AdaNode(bad) => print("should raise error")
    |                  ^^^

